<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AiFeel</string>
    <string name="title_stats">Stats</string>
    <string name="title_journal">Journal</string>
    <string name="title_home">Home</string>
    <string name="title_chat">AI Chat</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
     -->
    <string name="student">Student</string>
    <string name="student_name">Name:</string>
    <string name="majors">majors/minors</string>
    <string name="year">graduation year</string>
    <string name="age">age (opt.)</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="add">New Room</string>
    <string name="enter_name">Room Location</string>
    <string name="enter_cap">Room Capacity</string>
    <string name="save">SAVE</string>
    <string name="quit">QUIT</string>
    <string name="enter">ENTER</string>
    <string name="leave">* LEAVE *</string>
    <string name="storage">A5_CONTEXT_SP</string>
    <string name="email">Email</string>
    <string name="sign_up"><u>Sign up  </u></string>
    <string name="forgot_password"><u>Forgot Password  </u></string>
    <string name="sign_in_instead"><u>Sign in Instead</u></string>
    <string name="ai_response">No messages yet</string>
    <string name="ai_response_title">AI Message</string>


    <string name="name_input">Name: </string>
    <string name="age_input">Age: </string>
    <string name="gender_input">Gender: </string>
    <string name="notification_input">Notification: </string>
    <string name="persona_input">Personas: </string>
    <string name="email_input">Email: </string>
    <string name="search">Search</string>
    <string name="remove">Remove</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture">profile picture</string>
    <string name="edit_pal">Edit Pal</string>
    <string name="ai_pen_pal">AI Pen-pal</string>
    <string name="mood1">Miserable</string>
    <string name="mood2">Unhappy</string>
    <string name="mood3">Average</string>
    <string name="mood4">Content</string>
    <string name="mood5">Joyful</string>
    <string name="addImage">AddImage</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="streakPlaceholder">You\'ve been on a 0-day streak of journaling.</string>
    <string name="calendarIcon">Jump to date</string>
    <string name="prevMonth">Previous Month</string>
    <string name="nextMonth">Next Month</string>
    <string name="prevYear">Previous Year</string>
    <string name="nextYear">Next Year</string>
    <string name="okText">OK</string>
    <string name="cancelText">CANCEL</string>
    <string name="janMonth">Jan</string>
    <string name="febMonth">Feb</string>
    <string name="marMonth">Mar</string>
    <string name="aprMonth">Apr</string>
    <string name="mayMonth">May</string>
    <string name="junMonth">Jun</string>
    <string name="julMonth">Jul</string>
    <string name="augMonth">Aug</string>
    <string name="sepMonth">sep</string>
    <string name="octMonth">Oct</string>
    <string name="novMonth">Nov</string>
    <string name="decMonth">Dec</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Non-binary</item>
    </string-array>

    <string-array name="notification_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Never</item>
    </string-array>
</resources>