<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_previous_year"
            android:contentDescription="@string/prevYear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/date_arrow" />

        <TextView
            android:id="@+id/textview_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/button_next_year"
            android:contentDescription="@string/nextYear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:rotation="180"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/date_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_jan"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/janMonth" />

            <Button
                android:id="@+id/button_feb"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/febMonth" />

            <Button
                android:id="@+id/button_mar"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/marMonth" />

            <Button
                android:id="@+id/button_apr"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/aprMonth" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_may"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/mayMonth" />

            <Button
                android:id="@+id/button_jun"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/junMonth" />

            <Button
                android:id="@+id/button_jul"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/julMonth" />

            <Button
                android:id="@+id/button_aug"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/augMonth" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sep"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/sepMonth" />

            <Button
                android:id="@+id/button_oct"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/octMonth" />

            <Button
                android:id="@+id/button_nov"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/novMonth" />

            <Button
                android:id="@+id/button_dec"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:background="@null"
                android:onClick="onMonthSelected"
                android:text="@string/decMonth" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/saffron_mango"
            android:background="@android:color/transparent"
            android:text="@string/okText" />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/saffron_mango"
            android:background="@android:color/transparent"
            android:text="@string/cancelText" />
    </LinearLayout>
</LinearLayout>
