<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".NewRoom">

    <EditText
        android:id="@+id/new_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_name"
 />
    <EditText
        android:id="@+id/new_cap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_cap"
        android:inputType="numberDecimal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/quit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/quit"
            android:textColor="@color/navy" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/navy" />


    </LinearLayout>

</LinearLayout>