<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageView.Circle"
            app:srcCompat="@drawable/ai_default" />

        <ImageButton
            android:id="@+id/edit_profile_picture_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_circle"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profile_add"
            app:tint="@color/white"
            android:contentDescription="@string/addImage" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="42dp"
                android:layout_height="24dp"
                android:text="@string/name_input"
                android:maxLines="1"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/nameDisplay"
                android:layout_width="240dp"
                android:layout_height="30dp"
                android:background="@color/light_gray"
                android:gravity="center_horizontal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="42dp"
                android:layout_height="24dp"
                android:text="@string/age_input"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/ageDisplay"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@color/light_gray"
                android:gravity="center_horizontal"
                android:inputType = "number"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="51dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:text="@string/gender_input"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@color/light_gray"
                android:layout_marginStart="8dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="79dp"
            android:layout_height="26dp"
            android:text="@string/persona_input"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <EditText
        android:id="@+id/searchPersonas"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/round_search_bar"
        android:gravity="center_horizontal"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1" />

        <ScrollView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button_background"/>

        <Button
            android:id="@+id/quit_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quit"
            android:textColor="@color/black"
            android:background="@drawable/rounded_button_background"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
